Retrofitting JDK-11 compatibility. Adding JDK migration info in rev history.